Fixed line break in request show gender.

--- a/app/assets/stylesheets/listing.css.scss
+++ b/app/assets/stylesheets/listing.css.scss
@@ -56,7 +56,7 @@
         &.gender {
           padding-right: 2px;
           text-align: right;
-          width: 20px;
+          width: 30px;
         }
 
         &.time {
